--- a/dashboard.html
+++ b/dashboard.html
@@ -92,11 +92,13 @@
         <div class="info-card">
           <h3>Onboarding</h3>
           <ul>
-            <li>Birth Cert: <span class="status pending">Pending</span></li>
+            <li>Training: <span class="status pending">Pending</span></li>
             <br>
-            <li>Bank Info: <span class="status done">Done</span></li>
+            <li>Bank Info: <span class="status pending">Pending</span></li>
             <br>
             <li>Signed Offer: <span class="status done">Done</span></li>
+     
+            
           </ul>
         </div>
         <div class="info-card">
